# davincibot

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  index.ts  notes.dv  notes.json  package-lock.json  package.json  tsconfig.json
deprecated/: package-lock.json  package.json  tsconfig.json
deprecated/v1/: DaVinciBot.ts  Idea.ts
deprecated/v1/test/: progress.js  serialization.js
deprecated/v2/: Idea.ts
src/: AddIdeaProcess.ts  AddIdeaState.ts  BotProcess.ts  DaVinciBot.ts  Idea.ts  IdeaQueue.ts  Ideas.ts  Serialization.ts  commands.yml  core_commands.rs  core_printers.rs  error.rs  idea.rs  index.ts  lib.rs  main.rs  repl.rs  start.yml
src/@types/: quickdb.d.ts
src/processes/: AddIdeaProcess.ts  PlanIdeaProcess.ts  Serialization.ts  WorkOnIdeaProcess.ts
test/: serialization.js  tags.js  test.js
tests/: tags.rs
