[package]
authors = [
    "Nat Quayle Nelson <natquaylenelson@gmail.com>",
    "Sid Shanker",
    "Omayeli Arenyeka",
    "Kevin Martin",
    "Eliana Abraham",
]
exclude = [
    "deprecated/*"
]
name = "davincibot"
description="A command-line utility for managing absurdly eclectic interests."
license="GPL-3.0"
version = "0.0.6"
[dependencies]
serde = "1.0.69"
serde_derive = "1.0.69"
serde_json = "1.0.22"
clap = { version = "2.32.0", features = ["yaml"] }
subprocess = "0.1.13"
rusqlite = "0.13.0"
edit-rs = "0.1.1"
conv = "0.3.3"
